--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
+    "semantic-ui-react": "^0.67.0"
   },
   "scripts": {
     "start": "react-scripts start",
